kubernetes/apps/gatus/environments/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus
spec:
  selector:
    app: gatus
  ports:
    - port: 8080
      targetPort: http
      name: http
