kubernetes/apps/gatus/environments/production/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  namespace: gatus
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - status.timourhomelab.org
  rules:
    - backendRefs:
        - name: gatus
          port: 8080
